<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:text="@string/Captura"
            android:gravity="center"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/detalle_imagen" />

        <Button
            android:id="@+id/btntakefoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#3980BA"
            android:text="@string/btntakefoto"
            android:textColorHighlight="#2196F3"
            app:icon="@android:drawable/ic_menu_camera"
            app:iconTint="#EFF1F3" />
        <Spinner
            android:id="@+id/cbpais"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="20dp" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNombre"
                android:hint="@string/Nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Telefono"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtNota"
                android:hint="@string/Nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textMultiLine"
                android:lines="4"
                android:overScrollMode="always"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#517FA5"
            android:text="@string/btnGuardar" />

        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/btnMostrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#517FA5"
            android:text="@string/btnMostrar" />


    </androidx.appcompat.widget.LinearLayoutCompat>



</ScrollView>